--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "nestjs-telegraf": "^2.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "telegraf": "^4.9.1",
+    "telegraf-session-local": "^2.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -49,7 +52,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.4.4"
   },
   "jest": {
     "moduleFileExtensions": [
