--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/throttler": "^3.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "nestjs-telegraf": "^2.6.1",
     "pg": "^8.8.0",
