--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "mysql2": "^2.3.3",
     "nestjs-telegraf": "^2.6.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
